# punch2pen

./: .gitignore  CMakeLists.txt  CONTEXT.md  README.md  verify_setup.sh
.cache/clangd/index/: DatabaseManager.cpp.BBC22D58C3E7C51A.idx  DatabaseManager.h.55BD42A32AA1B4FE.idx  DictionaryProcessor.cpp.38D3C9D7BB4A247D.idx  DictionaryProcessor.h.3DCE754EE0D4DE5E.idx  IPCClient.cpp.47B4FD80A542A50E.idx  IPCClient.h.FBB8DE1C0EA696FB.idx  IPCServer.cpp.3457776735E85E76.idx  IPCServer.h.35F6A2F97605F229.idx  PluginEditor.cpp.91B991F5AE35B09A.idx  PluginEditor.h.F648DD509D1F8E6B.idx  PluginProcessor.cpp.97441AEA08FB0665.idx  PluginProcessor.h.7D02B9FB085C4001.idx  PositionDisplay.cpp.5414E70844E065EE.idx  PositionDisplay.h.9EEB671149D10D99.idx  Protocol.h.34763FCD1EFE02D6.idx  RingBuffer.h.1DA5CC5C03788F4A.idx  Transcriber.cpp.0818FD69B99014EF.idx  Transcriber.h.069E57D296DB3194.idx  TranscriptView.cpp.D35D6344A50F151D.idx  TranscriptView.h.3F60FE54D64F6C3A.idx  main.cpp.C6E8BBCEE3E8629D.idx
.github/workflows/: ci.yml
build_debug/: Makefile  compile_commands.json
build_debug/AudioPluginHost/: Makefile
build_debug/engine/: Makefile
build_debug/plugin/: Makefile
build_debug/vst3_helpers/punch2pen_plugin/: shared_defs_Debug.txt  shared_incs_Debug.txt
build_host_integration/: Makefile  compile_commands.json
build_host_integration/AudioPluginHost/: Makefile
build_host_integration/AudioPluginHost/AudioPluginHost_artefacts/Release/AudioPluginHost.app/Contents/: Info.plist
build_host_integration/AudioPluginHost/AudioPluginHost_artefacts/Release/AudioPluginHost.app/Contents/Resources/: AppIcon.icns  Assets.car
build_host_integration/autogenerated/: ggml-metal-embed.s
build_host_integration/engine/: Makefile
build_host_integration/plugin/: Makefile
build_release/: Makefile
build_release/engine/: Makefile
build_release/plugin/: Makefile
build_verify/: Makefile  compile_commands.json
build_verify/autogenerated/: ggml-metal-embed.s
build_verify/engine/: Makefile
build_verify/plugin/: Makefile
engine/: CMakeLists.txt
engine/src/: DatabaseManager.cpp  DatabaseManager.h  DictionaryProcessor.cpp  DictionaryProcessor.h  IPCServer.cpp  IPCServer.h  IPCServerInterface.h  OpenAICloudTranscriber.cpp  OpenAICloudTranscriber.h  ProfileManager.cpp  ProfileManager.h  Transcriber.cpp  Transcriber.h  TranscriberInterface.h  TranscriptionCoordinator.cpp  TranscriptionCoordinator.h  main.cpp
engine/tests/: DatabaseManagerTest.cpp  OpenAIJsonTest.cpp  ProfileManagerTest.cpp  ProtocolSerializationTest.cpp  TranscriptionCoordinatorTest.cpp
installer/macos/: build_pkg.sh
plugin/: CMakeLists.txt
plugin/Source/: CorrectionEditor.cpp  CorrectionEditor.h  IPCClient.cpp  IPCClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PositionDisplay.cpp  PositionDisplay.h  RingBuffer.h  TranscriptView.cpp  TranscriptView.h  WebViewEditor.cpp  WebViewEditor.h
plugin/Source/ui/: HANDOFF.md
plugin/Source/ui/public/: index.html
plugin/tests/: IPCClientTest.cpp  PluginProcessorStateTest.cpp  RingBufferTest.cpp
scripts/: download_model.sh  verify_correction.py  verify_transcription.py
shared/: Protocol.h
staging/engine/Applications/Punch2Pen/: punch2penEngine
